; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68020_rtm.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68020_rtm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M68020_ONLY = common dso_local global i32 0, align 4
@g_dasm_str = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"rtm     %c%d; (2+)\00", align 1
@g_cpu_ir = common dso_local global i32 0, align 4
@DASMFLAG_STEP_OUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @d68020_rtm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d68020_rtm() #0 {
  %1 = load i32, i32* @M68020_ONLY, align 4
  %2 = call i32 @LIMIT_CPU_TYPES(i32 %1)
  %3 = load i32, i32* @g_dasm_str, align 4
  %4 = load i32, i32* @g_cpu_ir, align 4
  %5 = call i64 @BIT_3(i32 %4)
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i64
  %8 = select i1 %6, i32 65, i32 68
  %9 = trunc i32 %8 to i8
  %10 = load i32, i32* @g_cpu_ir, align 4
  %11 = and i32 %10, 7
  %12 = call i32 @sprintf(i32 %3, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8 signext %9, i32 %11)
  %13 = load i32, i32* @DASMFLAG_STEP_OUT, align 4
  %14 = call i32 @SET_OPCODE_FLAGS(i32 %13)
  ret void
}

declare dso_local i32 @LIMIT_CPU_TYPES(i32) #1

declare dso_local i32 @sprintf(i32, i8*, i8 signext, i32) #1

declare dso_local i64 @BIT_3(i32) #1

declare dso_local i32 @SET_OPCODE_FLAGS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
